--- a/config/sync/core.entity_view_display.paragraph.form.preview.yml
+++ b/config/sync/core.entity_view_display.paragraph.form.preview.yml
@@ -13,27 +13,9 @@ dependencies:
     - layout_discovery
 third_party_settings:
   layout_builder:
-    sections:
-      -
-        layout_id: layout_onecol
-        layout_settings: {  }
-        components:
-          e4b52277-b5d6-4950-9e83-e09610010b72:
-            uuid: e4b52277-b5d6-4950-9e83-e09610010b72
-            region: content
-            configuration:
-              id: 'field_block:paragraph:form:field_admin_description'
-              label_display: ''
-              formatter:
-                type: string
-                label: hidden
-                settings:
-                  link_to_entity: false
-                third_party_settings: {  }
-              context_mapping:
-                entity: layout_builder.entity
-            additional: {  }
-            weight: 0
+    sections: {  }
+    enabled: false
+    allow_custom: false
 _core:
   default_config_hash: RvbKJrdbeXbNPfaZiJOs4EumMNVWVi-D-u6qJLv0aP0
 id: paragraph.form.preview
