--- a/config/sync/core.entity_view_display.media.document.banner.yml
+++ b/config/sync/core.entity_view_display.media.document.banner.yml
@@ -33,6 +33,7 @@ third_party_settings:
                 entity: layout_builder.entity
             additional: {  }
             weight: 0
+    enabled: true
 _core:
   default_config_hash: Ug5hcPT-Rj1T9WKjLJulJGJ-7wvsl0zHR1zYN5W_SLM
 id: media.document.banner
