--- a/config/sync/core.entity_view_display.media.document.default.yml
+++ b/config/sync/core.entity_view_display.media.document.default.yml
@@ -12,27 +12,9 @@ dependencies:
     - layout_discovery
 third_party_settings:
   layout_builder:
-    sections:
-      -
-        layout_id: layout_onecol
-        layout_settings: {  }
-        components:
-          ce6e55be-8a6c-46f8-8465-39daf6042cef:
-            uuid: ce6e55be-8a6c-46f8-8465-39daf6042cef
-            region: content
-            configuration:
-              id: 'field_block:media:document:field_media_file'
-              label_display: ''
-              formatter:
-                label: hidden
-                settings:
-                  use_description_as_link_text: true
-                third_party_settings: {  }
-                type: file_default
-              context_mapping:
-                entity: layout_builder.entity
-            additional: {  }
-            weight: 0
+    sections: {  }
+    enabled: false
+    allow_custom: false
 _core:
   default_config_hash: RtAgjysVJJYmI4BBbrWoB2DKgE7ueKBWjHkaMmAuiEM
 id: media.document.default
