--- a/config/sync/core.entity_view_display.media.document.medium.yml
+++ b/config/sync/core.entity_view_display.media.document.medium.yml
@@ -4,35 +4,17 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.media.medium
+    - field.field.media.document.field_media_categories
     - field.field.media.document.field_media_file
     - media.type.document
   module:
     - file
     - layout_builder
-    - layout_discovery
 third_party_settings:
   layout_builder:
-    sections:
-      -
-        layout_id: layout_onecol
-        layout_settings: {  }
-        components:
-          0fd2b7e6-a0be-4ae7-8670-eb6f59959b5f:
-            uuid: 0fd2b7e6-a0be-4ae7-8670-eb6f59959b5f
-            region: content
-            configuration:
-              id: 'field_block:media:document:field_media_file'
-              label_display: ''
-              formatter:
-                type: file_default
-                label: hidden
-                settings:
-                  use_description_as_link_text: true
-                third_party_settings: {  }
-              context_mapping:
-                entity: layout_builder.entity
-            additional: {  }
-            weight: 0
+    sections: {  }
+    enabled: false
+    allow_custom: false
 _core:
   default_config_hash: jOwsaukDVYpqqttx0u41R8NvNCdydjrUsNx6uOjIj8k
 id: media.document.medium
@@ -50,6 +32,7 @@ content:
     region: content
 hidden:
   created: true
+  field_media_categories: true
   name: true
   thumbnail: true
   uid: true
