--- a/config/sync/core.entity_view_display.media.document.small.yml
+++ b/config/sync/core.entity_view_display.media.document.small.yml
@@ -10,30 +10,11 @@ dependencies:
   module:
     - file
     - layout_builder
-    - layout_discovery
 third_party_settings:
   layout_builder:
-    sections:
-      -
-        layout_id: layout_onecol
-        layout_settings: {  }
-        components:
-          6e4ce8ba-9595-455b-8af9-fc1938024fd0:
-            uuid: 6e4ce8ba-9595-455b-8af9-fc1938024fd0
-            region: content
-            configuration:
-              id: 'field_block:media:document:field_media_file'
-              label_display: ''
-              formatter:
-                type: file_default
-                label: hidden
-                settings:
-                  use_description_as_link_text: true
-                third_party_settings: {  }
-              context_mapping:
-                entity: layout_builder.entity
-            additional: {  }
-            weight: 0
+    sections: {  }
+    enabled: false
+    allow_custom: false
 _core:
   default_config_hash: cxFCCnNVKFpeNMkFB4trJS1bSnsMWv-H8eegZdQvT8Q
 id: media.document.small
