--- a/config/sync/core.entity_view_display.media.image.banner.yml
+++ b/config/sync/core.entity_view_display.media.image.banner.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.media.banner
     - field.field.media.image.field_caption
+    - field.field.media.image.field_media_categories
     - field.field.media.image.field_media_image
     - media.type.image
     - responsive_image.styles.banner
@@ -14,28 +15,9 @@ dependencies:
     - responsive_image
 third_party_settings:
   layout_builder:
-    sections:
-      -
-        layout_id: layout_onecol
-        layout_settings: {  }
-        components:
-          a546d81f-dab2-4180-8bfd-bd288b75c55a:
-            uuid: a546d81f-dab2-4180-8bfd-bd288b75c55a
-            region: content
-            configuration:
-              id: 'field_block:media:image:field_media_image'
-              label_display: ''
-              formatter:
-                type: responsive_image
-                label: hidden
-                settings:
-                  responsive_image_style: banner
-                  image_link: ''
-                third_party_settings: {  }
-              context_mapping:
-                entity: layout_builder.entity
-            additional: {  }
-            weight: 0
+    sections: {  }
+    enabled: false
+    allow_custom: false
 _core:
   default_config_hash: s5MJFi6aQfX_l9wyQDkoxGGenBkfMSf7chdjvuTU1uo
 id: media.image.banner
@@ -55,6 +37,7 @@ content:
 hidden:
   created: true
   field_caption: true
+  field_media_categories: true
   name: true
   thumbnail: true
   uid: true
