--- a/config/sync/core.entity_view_display.media.image.large.yml
+++ b/config/sync/core.entity_view_display.media.image.large.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.media.large
     - field.field.media.image.field_caption
+    - field.field.media.image.field_media_categories
     - field.field.media.image.field_media_image
     - media.type.image
     - responsive_image.styles.large_800
@@ -14,44 +15,9 @@ dependencies:
     - responsive_image
 third_party_settings:
   layout_builder:
-    sections:
-      -
-        layout_id: layout_onecol
-        layout_settings: {  }
-        components:
-          d2767372-6760-4d0b-8e7d-85cdd159d792:
-            uuid: d2767372-6760-4d0b-8e7d-85cdd159d792
-            region: content
-            configuration:
-              id: 'field_block:media:image:field_media_image'
-              label_display: ''
-              formatter:
-                label: hidden
-                settings:
-                  responsive_image_style: large_800
-                  image_link: ''
-                third_party_settings: {  }
-                type: responsive_image
-              context_mapping:
-                entity: layout_builder.entity
-            additional: {  }
-            weight: 0
-          85811971-31a6-4154-a8cf-deb76d17a4ab:
-            uuid: 85811971-31a6-4154-a8cf-deb76d17a4ab
-            region: content
-            configuration:
-              id: 'field_block:media:image:field_caption'
-              label_display: ''
-              formatter:
-                type: string
-                label: hidden
-                settings:
-                  link_to_entity: false
-                third_party_settings: {  }
-              context_mapping:
-                entity: layout_builder.entity
-            additional: {  }
-            weight: 1
+    sections: {  }
+    enabled: false
+    allow_custom: false
 _core:
   default_config_hash: Tvt5IJw5Erk1uxEBccS1MkGjLFQz7GIgVTZbLY-bD_Q
 id: media.image.large
@@ -79,6 +45,7 @@ content:
 hidden:
   addtoany: true
   created: true
+  field_media_categories: true
   name: true
   thumbnail: true
   uid: true
