--- a/config/sync/core.entity_view_display.media.image.large_thumb.yml
+++ b/config/sync/core.entity_view_display.media.image.large_thumb.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.media.large_thumb
     - field.field.media.image.field_caption
+    - field.field.media.image.field_media_categories
     - field.field.media.image.field_media_image
     - media.type.image
     - responsive_image.styles.oc_large_thumb
@@ -14,28 +15,9 @@ dependencies:
     - responsive_image
 third_party_settings:
   layout_builder:
-    sections:
-      -
-        layout_id: layout_onecol
-        layout_settings: {  }
-        components:
-          1a2348bd-db2c-48ed-953f-ae4a47b5c773:
-            uuid: 1a2348bd-db2c-48ed-953f-ae4a47b5c773
-            region: content
-            configuration:
-              id: 'field_block:media:image:field_media_image'
-              label_display: ''
-              formatter:
-                type: responsive_image
-                label: hidden
-                settings:
-                  responsive_image_style: oc_large_thumb
-                  image_link: ''
-                third_party_settings: {  }
-              context_mapping:
-                entity: layout_builder.entity
-            additional: {  }
-            weight: 0
+    sections: {  }
+    enabled: false
+    allow_custom: false
 _core:
   default_config_hash: djHHO3A3i3Ae29dZdVcTKchSiJRsXB3Zb7kNbjdEHco
 id: media.image.large_thumb
@@ -55,6 +37,7 @@ content:
 hidden:
   created: true
   field_caption: true
+  field_media_categories: true
   name: true
   thumbnail: true
   uid: true
