--- a/config/sync/core.entity_view_display.media.image.medium.yml
+++ b/config/sync/core.entity_view_display.media.image.medium.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.media.medium
     - field.field.media.image.field_caption
+    - field.field.media.image.field_media_categories
     - field.field.media.image.field_media_image
     - media.type.image
     - responsive_image.styles.medium_500
@@ -14,44 +15,9 @@ dependencies:
     - responsive_image
 third_party_settings:
   layout_builder:
-    sections:
-      -
-        layout_id: layout_onecol
-        layout_settings: {  }
-        components:
-          b67afff0-876c-4a3c-9ddd-cc3b044cf716:
-            uuid: b67afff0-876c-4a3c-9ddd-cc3b044cf716
-            region: content
-            configuration:
-              id: 'field_block:media:image:field_media_image'
-              label_display: ''
-              formatter:
-                type: responsive_image
-                label: hidden
-                settings:
-                  responsive_image_style: medium_500
-                  image_link: ''
-                third_party_settings: {  }
-              context_mapping:
-                entity: layout_builder.entity
-            additional: {  }
-            weight: 0
-          ec2f9f68-2842-4925-94ba-4af1f44dc8e1:
-            uuid: ec2f9f68-2842-4925-94ba-4af1f44dc8e1
-            region: content
-            configuration:
-              id: 'field_block:media:image:field_caption'
-              label_display: ''
-              formatter:
-                type: string
-                label: hidden
-                settings:
-                  link_to_entity: false
-                third_party_settings: {  }
-              context_mapping:
-                entity: layout_builder.entity
-            additional: {  }
-            weight: 1
+    sections: {  }
+    enabled: false
+    allow_custom: false
 _core:
   default_config_hash: R3P0vtG_bAelsqPmrh08p4bRI73MSp_I8jdqzxR5EZo
 id: media.image.medium
@@ -78,6 +44,7 @@ content:
     third_party_settings: {  }
 hidden:
   created: true
+  field_media_categories: true
   name: true
   thumbnail: true
   uid: true
