--- a/config/sync/core.entity_view_display.media.image.small.yml
+++ b/config/sync/core.entity_view_display.media.image.small.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.media.small
     - field.field.media.image.field_caption
+    - field.field.media.image.field_media_categories
     - field.field.media.image.field_media_image
     - media.type.image
     - responsive_image.styles.small_300
@@ -14,44 +15,9 @@ dependencies:
     - responsive_image
 third_party_settings:
   layout_builder:
-    sections:
-      -
-        layout_id: layout_onecol
-        layout_settings: {  }
-        components:
-          f55bed1b-e0b8-4ac9-91ce-cd61bf1353db:
-            uuid: f55bed1b-e0b8-4ac9-91ce-cd61bf1353db
-            region: content
-            configuration:
-              id: 'field_block:media:image:field_media_image'
-              label_display: ''
-              formatter:
-                type: responsive_image
-                label: hidden
-                settings:
-                  responsive_image_style: small_300
-                  image_link: ''
-                third_party_settings: {  }
-              context_mapping:
-                entity: layout_builder.entity
-            additional: {  }
-            weight: 0
-          2c684784-c7a4-4a54-bba9-db121127e720:
-            uuid: 2c684784-c7a4-4a54-bba9-db121127e720
-            region: content
-            configuration:
-              id: 'field_block:media:image:field_caption'
-              label_display: ''
-              formatter:
-                type: string
-                label: hidden
-                settings:
-                  link_to_entity: false
-                third_party_settings: {  }
-              context_mapping:
-                entity: layout_builder.entity
-            additional: {  }
-            weight: 1
+    sections: {  }
+    enabled: false
+    allow_custom: false
 _core:
   default_config_hash: IPWDoJzptZpW9T5unGeV0BQ3HaDTk4TSwdviW2En3UA
 id: media.image.small
@@ -78,6 +44,7 @@ content:
     third_party_settings: {  }
 hidden:
   created: true
+  field_media_categories: true
   name: true
   thumbnail: true
   uid: true
