--- a/config/sync/core.entity_view_display.media.image.square.yml
+++ b/config/sync/core.entity_view_display.media.image.square.yml
@@ -5,53 +5,18 @@ dependencies:
   config:
     - core.entity_view_mode.media.square
     - field.field.media.image.field_caption
+    - field.field.media.image.field_media_categories
     - field.field.media.image.field_media_image
     - media.type.image
     - responsive_image.styles.350x350
   module:
     - layout_builder
-    - layout_discovery
     - responsive_image
 third_party_settings:
   layout_builder:
-    sections:
-      -
-        layout_id: layout_onecol
-        layout_settings: {  }
-        components:
-          b88eb18e-6797-4d1b-9105-7c76b30fcfa0:
-            uuid: b88eb18e-6797-4d1b-9105-7c76b30fcfa0
-            region: content
-            configuration:
-              id: 'field_block:media:image:field_media_image'
-              label_display: ''
-              formatter:
-                type: responsive_image
-                label: hidden
-                settings:
-                  responsive_image_style: 350x350
-                  image_link: ''
-                third_party_settings: {  }
-              context_mapping:
-                entity: layout_builder.entity
-            additional: {  }
-            weight: 0
-          9a6eaff0-f7fb-4beb-91ac-b45b287444bc:
-            uuid: 9a6eaff0-f7fb-4beb-91ac-b45b287444bc
-            region: content
-            configuration:
-              id: 'field_block:media:image:field_caption'
-              label_display: ''
-              formatter:
-                type: string
-                label: hidden
-                settings:
-                  link_to_entity: false
-                third_party_settings: {  }
-              context_mapping:
-                entity: layout_builder.entity
-            additional: {  }
-            weight: 1
+    sections: {  }
+    enabled: false
+    allow_custom: false
 _core:
   default_config_hash: q2TYmX68oDj5qztKNi3d87peQ8JDSURUWAFuScq5yII
 id: media.image.square
@@ -79,6 +44,7 @@ content:
 hidden:
   addtoany: true
   created: true
+  field_media_categories: true
   name: true
   thumbnail: true
   uid: true
