--- a/config/sync/core.entity_view_display.media.video.banner.yml
+++ b/config/sync/core.entity_view_display.media.video.banner.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.media.banner
+    - field.field.media.video.field_media_categories
     - field.field.media.video.field_media_video_embed_field
     - media.type.video
   module:
@@ -12,30 +13,9 @@ dependencies:
     - video_embed_field
 third_party_settings:
   layout_builder:
-    sections:
-      -
-        layout_id: layout_onecol
-        layout_settings: {  }
-        components:
-          106fd31e-547c-4c74-a613-c60fd6bf9a09:
-            uuid: 106fd31e-547c-4c74-a613-c60fd6bf9a09
-            region: content
-            configuration:
-              id: 'field_block:media:video:field_media_video_embed_field'
-              label_display: ''
-              formatter:
-                type: video_embed_field_video
-                label: hidden
-                settings:
-                  responsive: true
-                  width: 854
-                  height: 480
-                  autoplay: false
-                third_party_settings: {  }
-              context_mapping:
-                entity: layout_builder.entity
-            additional: {  }
-            weight: 0
+    sections: {  }
+    enabled: false
+    allow_custom: false
 _core:
   default_config_hash: Qtjl7K0w-kBxNg_z_hAoddt62ChWnrdec4iJYtrcw9o
 id: media.video.banner
@@ -56,6 +36,7 @@ content:
     region: content
 hidden:
   created: true
+  field_media_categories: true
   name: true
   thumbnail: true
   uid: true
