--- a/config/sync/core.entity_view_display.media.video.medium.yml
+++ b/config/sync/core.entity_view_display.media.video.medium.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.media.medium
+    - field.field.media.video.field_media_categories
     - field.field.media.video.field_media_video_embed_field
     - media.type.video
   module:
@@ -12,30 +13,9 @@ dependencies:
     - video_embed_field
 third_party_settings:
   layout_builder:
-    sections:
-      -
-        layout_id: layout_onecol
-        layout_settings: {  }
-        components:
-          57f1adef-2d59-4720-b8cd-a2a07784dab9:
-            uuid: 57f1adef-2d59-4720-b8cd-a2a07784dab9
-            region: content
-            configuration:
-              id: 'field_block:media:video:field_media_video_embed_field'
-              label_display: ''
-              formatter:
-                type: video_embed_field_video
-                label: hidden
-                settings:
-                  responsive: true
-                  width: 854
-                  height: 480
-                  autoplay: false
-                third_party_settings: {  }
-              context_mapping:
-                entity: layout_builder.entity
-            additional: {  }
-            weight: 0
+    sections: {  }
+    enabled: false
+    allow_custom: false
 _core:
   default_config_hash: 1HChDpADZ7T9KQEqDUR4LWJAcfhHHw68kDnXjyBP2T8
 id: media.video.medium
@@ -56,6 +36,7 @@ content:
     region: content
 hidden:
   created: true
+  field_media_categories: true
   name: true
   thumbnail: true
   uid: true
