--- a/config/sync/core.entity_view_display.node.event.default.yml
+++ b/config/sync/core.entity_view_display.node.event.default.yml
@@ -146,6 +146,7 @@ third_party_settings:
             weight: 1
     allow_custom: false
     is_enabled: true
+    enabled: true
 _core:
   default_config_hash: loMHYsfHZt2ah-BioORO_TAK_v7Gf-b6gCl285D03zk
 id: node.event.default
