--- a/config/sync/core.entity_view_display.node.event.teaser.yml
+++ b/config/sync/core.entity_view_display.node.event.teaser.yml
@@ -19,27 +19,9 @@ dependencies:
     - user
 third_party_settings:
   layout_builder:
-    sections:
-      -
-        layout_id: layout_onecol
-        layout_settings: {  }
-        components:
-          d74682dd-8f59-480d-aec1-667d7775fb10:
-            uuid: d74682dd-8f59-480d-aec1-667d7775fb10
-            region: content
-            configuration:
-              id: 'field_block:node:event:body'
-              label_display: ''
-              formatter:
-                label: hidden
-                type: text_summary_or_trimmed
-                settings:
-                  trim_length: 600
-                third_party_settings: {  }
-              context_mapping:
-                entity: layout_builder.entity
-            additional: {  }
-            weight: 0
+    sections: {  }
+    enabled: false
+    allow_custom: false
 _core:
   default_config_hash: GK0HiFImTvGdIj70A0gW6IlZXSvSdXuewHBLNjyfXeI
 id: node.event.teaser
