--- a/config/sync/core.entity_view_display.node.landing_page.teaser.yml
+++ b/config/sync/core.entity_view_display.node.landing_page.teaser.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.field.node.landing_page.field_banner
     - field.field.node.landing_page.field_metatags
     - field.field.node.landing_page.field_oc_widgets
+    - field.field.node.landing_page.layout_builder__layout
     - node.type.landing_page
   module:
     - layout_builder
@@ -21,22 +22,34 @@ third_party_settings:
         layout_id: layout_onecol
         layout_settings: {  }
         components:
-          eebf7538-444f-4066-8968-37b326afcd81:
-            uuid: eebf7538-444f-4066-8968-37b326afcd81
+          0a3880a5-3160-496b-b084-6b9bc48796ed:
+            uuid: 0a3880a5-3160-496b-b084-6b9bc48796ed
             region: content
             configuration:
+              label_display: '0'
+              context_mapping:
+                entity: layout_builder.entity
+              id: 'extra_field_block:node:landing_page:links'
+            additional: {  }
+            weight: 0
+          41d040e2-709b-4b3c-aadd-e190b020f938:
+            uuid: 41d040e2-709b-4b3c-aadd-e190b020f938
+            region: content
+            configuration:
+              label_display: '0'
+              context_mapping:
+                entity: layout_builder.entity
               id: 'field_block:node:landing_page:body'
-              label_display: ''
               formatter:
                 label: hidden
                 type: text_summary_or_trimmed
                 settings:
                   trim_length: 600
                 third_party_settings: {  }
-              context_mapping:
-                entity: layout_builder.entity
             additional: {  }
-            weight: 0
+            weight: 1
+    enabled: true
+    allow_custom: false
 _core:
   default_config_hash: H5NYP2wiQsA3PZwlgbAXrF5Wc2q9rO9dCqXx-6bJ06g
 id: node.landing_page.teaser
@@ -47,13 +60,13 @@ content:
   body:
     label: hidden
     type: text_summary_or_trimmed
-    weight: 101
+    weight: 1
     settings:
       trim_length: 600
     third_party_settings: {  }
     region: content
   links:
-    weight: 100
+    weight: 0
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -62,3 +75,4 @@ hidden:
   field_banner: true
   field_metatags: true
   field_oc_widgets: true
+  layout_builder__layout: true
