--- a/config/sync/core.entity_view_display.node.profiles.default.yml
+++ b/config/sync/core.entity_view_display.node.profiles.default.yml
@@ -36,6 +36,26 @@ third_party_settings:
               context_mapping: {  }
             additional: {  }
             weight: 0
+          9fbc4896-5302-4642-a4cd-f68eaea8384e:
+            uuid: 9fbc4896-5302-4642-a4cd-f68eaea8384e
+            region: content
+            configuration:
+              label_display: '0'
+              context_mapping:
+                entity: layout_builder.entity
+              id: 'extra_field_block:node:profiles:links'
+            additional: {  }
+            weight: 1
+          e268c62b-b122-44d3-a7ee-51bdbdc37c52:
+            uuid: e268c62b-b122-44d3-a7ee-51bdbdc37c52
+            region: content
+            configuration:
+              label_display: '0'
+              context_mapping:
+                entity: layout_builder.entity
+              id: 'extra_field_block:node:profiles:links'
+            additional: {  }
+            weight: 2
       -
         layout_id: layout_onecol
         layout_settings: {  }
@@ -152,6 +172,7 @@ third_party_settings:
             weight: 0
     allow_custom: false
     is_enabled: true
+    enabled: true
 _core:
   default_config_hash: Iiubax8789QrNj_iT59-y0hssFUHZDfqSWj9eoVD0j8
 id: node.profiles.default
