--- a/config/sync/core.entity_view_display.node.support_book.default.yml
+++ b/config/sync/core.entity_view_display.node.support_book.default.yml
@@ -31,6 +31,26 @@ third_party_settings:
               context_mapping: {  }
             additional: {  }
             weight: 0
+          d1ae28cd-12f6-4027-a985-1bedce067873:
+            uuid: d1ae28cd-12f6-4027-a985-1bedce067873
+            region: content
+            configuration:
+              label_display: '0'
+              context_mapping:
+                entity: layout_builder.entity
+              id: 'extra_field_block:node:support_book:links'
+            additional: {  }
+            weight: 1
+          8f71a7af-846d-4d6e-9793-51e791da211c:
+            uuid: 8f71a7af-846d-4d6e-9793-51e791da211c
+            region: content
+            configuration:
+              label_display: '0'
+              context_mapping:
+                entity: layout_builder.entity
+              id: 'extra_field_block:node:support_book:links'
+            additional: {  }
+            weight: 2
       -
         layout_id: layout_onecol
         layout_settings: {  }
@@ -92,6 +112,7 @@ third_party_settings:
             weight: 1
     allow_custom: false
     is_enabled: true
+    enabled: true
 _core:
   default_config_hash: zs7lQwC-x3RO8F51uxAs-b0WMoO79Uls3sPCfC8Ggks
 id: node.support_book.default
