--- a/config/sync/core.entity_view_display.paragraph.accordion_group.preview.yml
+++ b/config/sync/core.entity_view_display.paragraph.accordion_group.preview.yml
@@ -13,27 +13,9 @@ dependencies:
     - layout_discovery
 third_party_settings:
   layout_builder:
-    sections:
-      -
-        layout_id: layout_onecol
-        layout_settings: {  }
-        components:
-          8f7ab6e7-2a23-40be-b140-4c3600cf5bd9:
-            uuid: 8f7ab6e7-2a23-40be-b140-4c3600cf5bd9
-            region: content
-            configuration:
-              id: 'field_block:paragraph:accordion_group:field_admin_description'
-              label_display: ''
-              formatter:
-                label: hidden
-                settings:
-                  link_to_entity: false
-                third_party_settings: {  }
-                type: string
-              context_mapping:
-                entity: layout_builder.entity
-            additional: {  }
-            weight: 0
+    sections: {  }
+    enabled: false
+    allow_custom: false
 _core:
   default_config_hash: dBcAEE4FictnV5HfCiQPbf5AcAnQrlm5NeQWE6N9w_Y
 id: paragraph.accordion_group.preview
