--- a/config/sync/core.entity_view_display.paragraph.image.preview.yml
+++ b/config/sync/core.entity_view_display.paragraph.image.preview.yml
@@ -15,27 +15,9 @@ dependencies:
     - layout_discovery
 third_party_settings:
   layout_builder:
-    sections:
-      -
-        layout_id: layout_onecol
-        layout_settings: {  }
-        components:
-          fbae03d3-8a71-408a-a907-cdc2627fd5fa:
-            uuid: fbae03d3-8a71-408a-a907-cdc2627fd5fa
-            region: content
-            configuration:
-              id: 'field_block:paragraph:image:field_admin_description'
-              label_display: ''
-              formatter:
-                type: string
-                label: hidden
-                settings:
-                  link_to_entity: false
-                third_party_settings: {  }
-              context_mapping:
-                entity: layout_builder.entity
-            additional: {  }
-            weight: 0
+    sections: {  }
+    enabled: false
+    allow_custom: false
 _core:
   default_config_hash: AjAC2S2QaMII3YbdOiRs2RTZAEAsFaM6mDM70Fb2rYQ
 id: paragraph.image.preview
