--- a/config/sync/core.entity_view_display.paragraph.landing_page_section.preview.yml
+++ b/config/sync/core.entity_view_display.paragraph.landing_page_section.preview.yml
@@ -19,57 +19,9 @@ dependencies:
     - options
 third_party_settings:
   layout_builder:
-    sections:
-      -
-        layout_id: layout_onecol
-        layout_settings: {  }
-        components:
-          a3afd097-6f68-4ee2-8cdc-464635ab8b9e:
-            uuid: a3afd097-6f68-4ee2-8cdc-464635ab8b9e
-            region: content
-            configuration:
-              id: 'field_block:paragraph:landing_page_section:field_admin_description'
-              label_display: ''
-              formatter:
-                type: string
-                label: hidden
-                settings:
-                  link_to_entity: false
-                third_party_settings: {  }
-              context_mapping:
-                entity: layout_builder.entity
-            additional: {  }
-            weight: 0
-          705aa275-3473-46d8-9b01-c4667723fcf3:
-            uuid: 705aa275-3473-46d8-9b01-c4667723fcf3
-            region: content
-            configuration:
-              id: 'field_block:paragraph:landing_page_section:field_layout'
-              label_display: ''
-              formatter:
-                label: inline
-                settings: {  }
-                third_party_settings: {  }
-                type: list_default
-              context_mapping:
-                entity: layout_builder.entity
-            additional: {  }
-            weight: 1
-          3c514936-4f06-4cb9-9b1a-4ee2834e8a8a:
-            uuid: 3c514936-4f06-4cb9-9b1a-4ee2834e8a8a
-            region: content
-            configuration:
-              id: 'field_block:paragraph:landing_page_section:field_background_style'
-              label_display: ''
-              formatter:
-                label: inline
-                settings: {  }
-                third_party_settings: {  }
-                type: list_default
-              context_mapping:
-                entity: layout_builder.entity
-            additional: {  }
-            weight: 2
+    sections: {  }
+    enabled: false
+    allow_custom: false
 id: paragraph.landing_page_section.preview
 targetEntityType: paragraph
 bundle: landing_page_section
