--- a/config/sync/core.entity_view_display.paragraph.lightbox_gallery.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.lightbox_gallery.default.yml
@@ -12,44 +12,9 @@ dependencies:
     - layout_discovery
 third_party_settings:
   layout_builder:
-    sections:
-      -
-        layout_id: layout_onecol
-        layout_settings: {  }
-        components:
-          720e2b37-1c0d-42ba-ac78-b159e2490210:
-            uuid: 720e2b37-1c0d-42ba-ac78-b159e2490210
-            region: content
-            configuration:
-              id: 'field_block:paragraph:lightbox_gallery:field_widget_title'
-              label_display: ''
-              formatter:
-                label: hidden
-                settings:
-                  link_to_entity: false
-                third_party_settings: {  }
-                type: string
-              context_mapping:
-                entity: layout_builder.entity
-            additional: {  }
-            weight: 0
-          c574d59e-b9df-4838-9449-b979d1d33644:
-            uuid: c574d59e-b9df-4838-9449-b979d1d33644
-            region: content
-            configuration:
-              id: 'field_block:paragraph:lightbox_gallery:field_oc_image_multi'
-              label_display: ''
-              formatter:
-                type: entity_reference_entity_view
-                label: hidden
-                settings:
-                  view_mode: default
-                  link: false
-                third_party_settings: {  }
-              context_mapping:
-                entity: layout_builder.entity
-            additional: {  }
-            weight: 1
+    sections: {  }
+    enabled: false
+    allow_custom: false
 _core:
   default_config_hash: 6B4f1w_LfNx5aZIB_WMW1pVjb2it5OVKWu1QaVXwUfw
 id: paragraph.lightbox_gallery.default
