--- a/config/sync/core.entity_view_display.paragraph.news_by_category.preview.yml
+++ b/config/sync/core.entity_view_display.paragraph.news_by_category.preview.yml
@@ -15,27 +15,9 @@ dependencies:
     - layout_discovery
 third_party_settings:
   layout_builder:
-    sections:
-      -
-        layout_id: layout_onecol
-        layout_settings: {  }
-        components:
-          fa2796fe-e148-41eb-b1f3-d836550b97cb:
-            uuid: fa2796fe-e148-41eb-b1f3-d836550b97cb
-            region: content
-            configuration:
-              id: 'field_block:paragraph:news_by_category:field_admin_description'
-              label_display: ''
-              formatter:
-                label: hidden
-                settings:
-                  link_to_entity: false
-                third_party_settings: {  }
-                type: string
-              context_mapping:
-                entity: layout_builder.entity
-            additional: {  }
-            weight: 0
+    sections: {  }
+    enabled: false
+    allow_custom: false
 _core:
   default_config_hash: hLmzzIUnQ5kHCVx8JbWOSneRDCh6cWB-H-h72Q2SVm0
 id: paragraph.news_by_category.preview
