--- a/config/sync/core.entity_view_display.paragraph.slideshow.preview.yml
+++ b/config/sync/core.entity_view_display.paragraph.slideshow.preview.yml
@@ -10,30 +10,11 @@ dependencies:
     - paragraphs.paragraphs_type.slideshow
   module:
     - layout_builder
-    - layout_discovery
 third_party_settings:
   layout_builder:
-    sections:
-      -
-        layout_id: layout_onecol
-        layout_settings: {  }
-        components:
-          a5827ae8-4c3f-4a51-ab5e-2a636c362a07:
-            uuid: a5827ae8-4c3f-4a51-ab5e-2a636c362a07
-            region: content
-            configuration:
-              id: 'field_block:paragraph:slideshow:field_admin_description'
-              label_display: ''
-              formatter:
-                label: hidden
-                settings:
-                  link_to_entity: false
-                third_party_settings: {  }
-                type: string
-              context_mapping:
-                entity: layout_builder.entity
-            additional: {  }
-            weight: 0
+    sections: {  }
+    enabled: false
+    allow_custom: false
 _core:
   default_config_hash: XZanBBXDIpnK4U9BSUcZr4zLIMPxymiihtGGzXWU8w8
 id: paragraph.slideshow.preview
