--- a/config/sync/core.entity_view_display.paragraph.text.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.text.default.yml
@@ -14,48 +14,9 @@ dependencies:
     - text
 third_party_settings:
   layout_builder:
-    sections:
-      -
-        layout_id: layout_onecol
-        layout_settings: {  }
-        components:
-          11d945cc-e99f-4edf-a641-89d47d8ccb48:
-            uuid: 11d945cc-e99f-4edf-a641-89d47d8ccb48
-            region: content
-            configuration:
-              id: 'entity_field:paragraph:field_widget_title'
-              label: 'Widget Title'
-              provider: ctools_block
-              label_display: '0'
-              formatter:
-                label: hidden
-                type: string
-                settings:
-                  link_to_entity: false
-                third_party_settings: {  }
-                weight: 0
-              context_mapping:
-                entity: layout_builder.entity
-            additional: {  }
-            weight: 0
-          531bd36d-5dbf-4ef3-b5ef-b6723f441ed0:
-            uuid: 531bd36d-5dbf-4ef3-b5ef-b6723f441ed0
-            region: content
-            configuration:
-              id: 'entity_field:paragraph:field_oc_long_text'
-              label: Text
-              provider: ctools_block
-              label_display: '0'
-              formatter:
-                label: hidden
-                type: text_default
-                settings: {  }
-                third_party_settings: {  }
-                weight: 0
-              context_mapping:
-                entity: layout_builder.entity
-            additional: {  }
-            weight: 1
+    sections: {  }
+    enabled: false
+    allow_custom: false
 _core:
   default_config_hash: dmmQTQIJeqnAAoictW2OF0svRWpkJkUS5kTTGi7mCLs
 id: paragraph.text.default
