--- a/config/sync/core.entity_view_display.paragraph.video.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.video.default.yml
@@ -12,44 +12,9 @@ dependencies:
     - layout_discovery
 third_party_settings:
   layout_builder:
-    sections:
-      -
-        layout_id: layout_onecol
-        layout_settings: {  }
-        components:
-          0d76da5e-a53d-4625-81d7-51cb59fe6ac8:
-            uuid: 0d76da5e-a53d-4625-81d7-51cb59fe6ac8
-            region: content
-            configuration:
-              id: 'field_block:paragraph:video:field_widget_title'
-              label_display: ''
-              formatter:
-                label: hidden
-                settings:
-                  link_to_entity: false
-                third_party_settings: {  }
-                type: string
-              context_mapping:
-                entity: layout_builder.entity
-            additional: {  }
-            weight: 0
-          b481691a-e0fb-4471-92ab-604b65906c74:
-            uuid: b481691a-e0fb-4471-92ab-604b65906c74
-            region: content
-            configuration:
-              id: 'field_block:paragraph:video:field_oc_video'
-              label_display: ''
-              formatter:
-                label: hidden
-                settings:
-                  view_mode: default
-                  link: false
-                third_party_settings: {  }
-                type: entity_reference_entity_view
-              context_mapping:
-                entity: layout_builder.entity
-            additional: {  }
-            weight: 1
+    sections: {  }
+    enabled: false
+    allow_custom: false
 _core:
   default_config_hash: S2KLvWGDvZO3llTIpCCfkrbrRme3bBhvJcbtCDMyg9M
 id: paragraph.video.default
