--- a/config/sync/core.entity_view_display.user.user.compact.yml
+++ b/config/sync/core.entity_view_display.user.user.compact.yml
@@ -15,6 +15,7 @@ third_party_settings:
         layout_id: layout_onecol
         layout_settings: {  }
         components: {  }
+    enabled: true
 _core:
   default_config_hash: 1jV7tW1bYyDddxe_sUIDaD8ZAaGEek8nl3l4Y-Cd3-I
 id: user.user.compact
