Add drupal wrapper block for route and js library holder to search block

--- a/web/themes/oc_patterns/oc_patterns.libraries.yml
+++ b/web/themes/oc_patterns/oc_patterns.libraries.yml
@@ -6,7 +6,6 @@ global-styling:
       https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css: {type: external, minified: true }
   js:
     components/_patterns/00-base/global/global.js: {}
-    components/_patterns/02-molecules/blocks/search-block/search-block.js: {}
     components/js/stacktable/stacktable.min.js: {}
   dependencies:
     - core/jquery
@@ -56,6 +55,15 @@ page-menu:
     - core/jquery
     - core/drupal
     - core/underscore
+    - core/drupalSettings
+    - core/jquery.once
+search-block:
+  version: 1.0
+  js:
+    components/_patterns/02-molecules/blocks/search-block/search-block.js: {}
+  dependencies:
+    - core/jquery
+    - core/drupal
     - core/drupalSettings
     - core/jquery.once
 slideshow:
