--- a/web/themes/oc_patterns/components/_patterns/02-molecules/blocks/search-block/search-block.yml
+++ b/web/themes/oc_patterns/components/_patterns/02-molecules/blocks/search-block/search-block.yml
@@ -1,2 +1,2 @@
 search_instructions:
-  "This block replaces the Drupal search block. Form styles are set in macros.twig. Available styles: toggle, box."
+  "This block replaces the Drupal search block and is embedded into Drupal. Form styles are set in macros.twig. Available styles: toggle, box."
